[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pysmithchart"]

[tool.setuptools.dynamic]
version = {attr = "pysmithchart.__version__"}

[project]
name = "pysmithchart"
authors = [
    { name = "Paul Staerke", email = "paul.staerke@gmail.com" },
    { name = "Scott Prahl", email = "scott.prahl@oit.edu" }
]
description = "A Python library extending Matplotlib to generate Smith Charts."
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.9"
keywords = ["Smith Chart", "impedance", "reflection", "RF engineering", "microwave"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
    "matplotlib >= 3.7.0",
    "numpy >= 1.20",
    "scipy >= 1.6"
]

[project.optional-dependencies]
docs = [
  "Sphinx==8.1.3",
  "nbsphinx==0.9.7",
  "sphinx_automodapi",
  "sphinx_rtd_theme",
]

dev = [
  # Testing
  "pytest",
  "imageio",
  "requests",

  # Lint / QA
  "ruff",
  "yamllint",
  "rstcheck",
  "pylint",
  "pyroma",
  "black[jupyter]",

  # Release / packaging checks
  "build",
  "check-manifest",
  "libarchive-c",
  "pyyaml",
  "setuptools",

  # Notebooks (local JupyterLab workflows)
  "jupyterlab",
  "nbconvert",
  "nbformat",
]

lite = [
  "jupyterlite-core==0.6.4",
  "jupyterlite-pyodide-kernel==0.6.1",
]

[project.urls]
Homepage = "https://github.com/scottprahl/pysmithchart"
Documentation = "https://pysmithchart.readthedocs.io"
Source = "https://github.com/scottprahl/pysmithchart"
Tracker = "https://github.com/scottprahl/pysmithchart/issues"
Changelog = "https://github.com/scottprahl/pysmithchart/blob/main/docs/CHANGELOG.rst"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]

[tool.pylint]
disable = [
    "C0103", "C0209", "C0302",
    "R0902", "R0904", "R0912", "R0913", "R0914", "R0915", "R1702",
    "W0511"
]
max-line-length = 120

[tool.ruff]
line-length = 120
exclude = ["docs"]
lint.select = ["D", "E", "F", "W"]
lint.ignore = ["D200", "D212", "F403"]
lint.pydocstyle.convention = "google"

[tool.check-manifest]
ignore = [
  ".readthedocs.yaml",
  ".jupyterlite-ignore",
  "Makefile",
  "requirements-dev.txt",
  "jupyter_lite_config.json",
  "docs/*",
  "docs/**/*",
  "release.txt",
]


